@@ -933,11 +933,11 @@ Message Handler Messages </font> (message type 1):</b>
       </td>
       <td valign="top" width="24">
       <p style="" align="center"> <font style="font-size: 9pt;"
- size="2">UL</font></p>
+ size="2">S</font></p>
       </td>
       <td valign="top" width="110">
       <p style="" align="center"> <font style="font-size: 9pt;"
- size="2">dom id</font></p>
+ size="2">dom id (12 bytes)</font></p>
       </td>
     </tr>
     <tr>
